--- a/platform/themes/ripple/assets/sass/style.scss
+++ b/platform/themes/ripple/assets/sass/style.scss
@@ -10,4 +10,9 @@ body {
 @import 'content';
 @import 'rtl';
 @import 'custom';
-@import 'mockset';
+@import 'home';
+@import 'papers';
+@import 'question';
+@import 'solution';
+@import 'old';
+@import 'responsive';
