--- a/platform/themes/ripple/assets/sass/_papers.scss
+++ b/platform/themes/ripple/assets/sass/_papers.scss
@@ -250,6 +250,10 @@
     background-color: #007bff;
 }
 
+.badge-owned {
+    background-color: #6A0DAD;
+}
+
 .modal {
     display: none;
     position: fixed;
